--- a/SVM_base.ipynb
+++ b/SVM_base.ipynb
@@ -7,16 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import datasets\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "#from sklearn import datasets\n",
+    "#import pandas as pd\n",
+    "#from sklearn.model_selection import train_test_split\n",
+    "#from sklearn.linear_model import LogisticRegression\n",
+    "#from sklearn.svm import SVC\n",
+    "#from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "#import seaborn as sns\n",
+    "#import matplotlib.pyplot as plt\n",
+    "#import numpy as np\n",
+    "#from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
