--- a/RandomForest_base.ipynb
+++ b/RandomForest_base.ipynb
@@ -331,6 +331,32 @@
     "4. Plot impurity variable importance.\n",
     "5. Plot permutation variable importance."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b7b5234",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a3e3483",
+   "metadata": {},
+   "source": [
+    "# Final measure of accuracy\n",
+    "\n",
+    "After you have decided which model you favor, measure the accuracy using the validation dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "778cb8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
