--- a/SVM_base.ipynb
+++ b/SVM_base.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "09bc07b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from sklearn import datasets\n",
-    "#import pandas as pd\n",
-    "#from sklearn.model_selection import train_test_split\n",
-    "#from sklearn.linear_model import LogisticRegression\n",
-    "#from sklearn.svm import SVC\n",
-    "#from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "#import seaborn as sns\n",
-    "#import matplotlib.pyplot as plt\n",
-    "#import numpy as np\n",
-    "#from sklearn.preprocessing import StandardScaler"
+    "from sklearn import datasets\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -33,13 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "51a3f99f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# load ants dataset\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m dataframe \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall_measurements2020x09.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# replace species names with zeros and ones\u001b[39;00m\n\u001b[1;32m      5\u001b[0m dataframe[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspecies\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m dataframe[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspecies\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mzeteki\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# load ants dataset\n",
-    "dataframe = pd.read_csv('filename')\n",
+    "dataframe = pd.read_csv('all_measurements2020x09.csv')\n",
     "\n",
     "# replace species names with zeros and ones\n",
     "dataframe['species'] = dataframe['species'].replace('zeteki', 0)\n",
